add endpoint POST /api/v1/products
