# internal/entity/product.go
@@ -1,0 +1,24 @@
+package entity
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"github.com/shopspring/decimal"
+)
+
+type Product struct {
+	ID          uuid.UUID       `json:"id"`
+	UserID      uuid.UUID       `json:"user_id"`
+	Name        string          `json:"name"`
+	Description string          `json:"description"`
+	Stok        int             `json:"stok"`
+	Price       decimal.Decimal `json:"price"`
+	CreatedAt   time.Time       `json:"created_at"`
+	UpdatedAt   time.Time       `json:"updated_at"`
+	User        User            `json:"user"`
+}
+
+func (Product) TableName() string {
+	return "products"
+}
